@@ -56,16 +56,11 @@
  *  Note that this design currently has the following limitations:
  *    - Minimum ISP target clock speed of 500KHz due to hardware SPI module prescaler limitations
  *    - No reversed/shorted target connector detection and notification
- *    - Very slow TPI and PDI programming when in software emulated USART mode
+ *    - A seperate header is required for each of the ISP, PDI and TPI programming protocols that the user wishes to use
  *
  *  On AVR models with an ADC converter, AVCC should be tied to 5V (e.g. VBUS) and the VTARGET_ADC_CHANNEL token should be
  *  set to an appropriate ADC channel number in the project makefile for VTARGET detection to operate correctly. On models
  *  without an ADC converter, VTARGET will report a fixed 5V level at all times.
- *
- *  When compiled for the XPLAIN board target, this will automatically configure itself for the correct connections to the
- *  XPLAIN's XMEGA AVR, and will enable hardware PDI/TPI only programming support (since ISP mode is not needed). Note that
- *  the first revision XPLAIN board lacks a bootloader on the AT90USB1287, and thus for this firmware to be loaded, an external
- *  programmer will be required.
  *
  *  While this application can be compiled for USB AVRs with as little as 8KB of FLASH, for full functionality 16KB or more
  *  of FLASH is required. On 8KB devices, ISP or PDI/TPI programming support can be disabled to reduce program size.
@@ -128,7 +123,7 @@
  *    <td><b>PDI 6 Pin Layout:</b></td>
  *   </tr>
  *   <tr>
- *    <td>MISO <b><sup>2</sup></b></td>
+ *    <td>Tx/Rx <b><sup>2</sup></b></td>
  *    <td>DATA</td>
  *    <td>1</td>
  *   </tr>
@@ -148,7 +143,7 @@
  *    <td>4</td>
  *   </tr>
  *   <tr>
- *    <td>PORTx.y <b><sup>2, 3</sup></b></td>
+ *    <td>XCLK</td>
  *    <td>CLOCK</td>
  *    <td>5</td>
  *   </tr>
@@ -160,9 +155,7 @@
  *  </table>
  *
  *  <b><sup>1</sup></b> <i>Optional, see \ref SSec_Options section - for USB AVRs with ADC modules only</i> \n
- *  <b><sup>2</sup></b> <i>When XPROG_VIA_HARDWARE_USART is set, the AVR's Tx and Rx become the DATA line when connected together
- *                         via a pair of 220 ohm resistors, and the AVR's XCK pin becomes CLOCK.</i> \n
- *  <b><sup>3</sup></b> <i>See AUX line related tokens in the \ref SSec_Options section</i>
+ *  <b><sup>2</sup></b> <i>The AVR's Tx and Rx become the DATA line when connected together via a pair of 220 ohm resistors</i> \n
  *
  *  \section Sec_TPI TPI Connections
  *  Connections to the device for TPI programming<b><sup>1</sup></b> (when enabled):
@@ -174,7 +167,7 @@
  *    <td><b>TPI 6 Pin Layout:</b></td>
  *   </tr>
  *   <tr>
- *    <td>MISO <b><sup>2</sup></b></td>
+ *    <td>Tx/Rx <b><sup>2</sup></b></td>
  *    <td>DATA</td>
  *    <td>1</td>
  *   </tr>
@@ -184,7 +177,7 @@
  *    <td>2</td>
  *   </tr>
  *   <tr>
- *    <td>SCLK <b><sup>2</sup></b></td>
+ *    <td>XCLK <b><sup>2</sup></b></td>
  *    <td>CLOCK</td>
  *    <td>3</td>
  *   </tr>
@@ -206,8 +199,7 @@
  *  </table>
  *
  *  <b><sup>1</sup></b> <i>Optional, see \ref SSec_Options section - for USB AVRs with ADC modules only</i> \n
- *  <b><sup>2</sup></b> <i>When XPROG_VIA_HARDWARE_USART is set, the AVR's Tx and Rx become the DATA line when connected together
- *                         via a pair of 220 ohm resistors, and the AVR's XCK pin becomes CLOCK.</i> \n
+ *  <b><sup>2</sup></b> <i>The AVR's Tx and Rx become the DATA line when connected together via a pair of 220 ohm resistors</i> \n
  *  <b><sup>3</sup></b> <i>See AUX line related tokens in the \ref SSec_Options section</i>
  *
  *  \section SSec_Options Project Options
@@ -259,14 +251,6 @@
  *    <td>ENABLE_XPROG_PROTOCOL</td>
  *    <td>Makefile CDEFS</td>
  *    <td>Define to enable PDI and TPI programming protocol support. <i>Ignored when compiled for the XPLAIN board.</i></td>  
- *   </tr>
- *   <tr>
- *    <td>XPROG_VIA_HARDWARE_USART</td>
- *    <td>Makefile CDEFS</td>
- *    <td>Define to force the PDI and TPI protocols (when enabled) to use the much faster hardware USART instead of bit-banging
- *        to match the official AVRISP pinout. This breaks pinout compatibility with the official AVRISP MKII (and requires 
- *        seperate ISP, PDI, and TPI programming headers) but increases programming speed dramatically.
- *        <i>Ignored when compiled for the XPLAIN board.</i></td>  
  *   </tr>
  *   <tr>
  *    <td>NO_VTARGET_DETECT</td>
